--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ background-color: white;
 }
 .menu-items {
     background-color: white;
-    height: 100%;
+    height: inherit !important;
     padding-left: 0 !important;
     line-height: 2em;
     min-height: 100vh;
@@ -115,7 +115,37 @@ div.calender {
     font-size: 1.2rem;
     font-weight: 600;
 }
-#news-container h6{
+/* #news-container h6{ */
     /* font-size: 1.2rem; */
     /* font-weight: 600; */
+/* } */
+.card{
+    width: 250px;
+    position: relative;
+    padding: 2rem;
+    border-radius: 10px;
+}
+.card>h2{
+    font-weight: bold;
+    font-size: 24px;
+    color: #4264D0;
+}
+.count{
+    font-size: 32px;
+}
+.card-icon{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    background: #4264D0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card-icon>i{
+    color: white;
+    font-size: 18px;
 }
