--- a/css/schedule-style.css
+++ b/css/schedule-style.css
@@ -8,7 +8,7 @@
 }
 
 .top-section {
-  margin: 2rem 0 8rem 0;
+  margin: 2rem 0;
   max-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
