--- a/css/schedule-style.scss
+++ b/css/schedule-style.scss
@@ -13,7 +13,7 @@
 }
 
 .top-section {
-    margin: 2rem 0 8rem 0;
+    margin: 2rem 0;
     max-width: 700px;
     @include flex-center();
     .button-group {
