--- a/css/style.css
+++ b/css/style.css
@@ -119,11 +119,25 @@ div.calender {
     /* font-size: 1.2rem; */
     /* font-weight: 600; */
 /* } */
-.card{
+/* .card{
+    
+} */
+a{
+    color: inherit;
+    text-decoration: none;
+}
+.home-card{
     width: 250px;
     position: relative;
     padding: 2rem;
     border-radius: 10px;
+    cursor: pointer;
+}
+.home-card:hover{
+    box-shadow: -3px 4px 17px 3px rgba(183,183,183,0.75);
+    -webkit-box-shadow: -3px 4px 17px 3px rgba(183,183,183,0.75);
+    -moz-box-shadow: -3px 4px 17px 3px rgba(183,183,183,0.75);
+    transform: scale(1.058);
 }
 .card>h2{
     font-weight: bold;
